Fixed: z-index

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html{
 .menu{
     position: absolute;
     position: fixed;
-    z-index: 999999999;
+    z-index: 1;
     top: 4%;
     right: 2%;
 }
